manifests/adguard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    app: adguardhome
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguardhome
  namespace: adguard
spec:
  serviceName: adguard-web
  replicas: 1
  selector:
    matchLabels:
      app: adguardhome
  template:
    metadata:
      labels:
        app: adguardhome
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: adguardhome
          image: adguard/adguardhome:v0.107.52
          imagePullPolicy: IfNotPresent
          ports:
            - name: dns-udp
              containerPort: 53
              hostPort: 53
              protocol: UDP
            - name: dns-tcp
              containerPort: 53
              hostPort: 53
              protocol: TCP
            - name: http
              containerPort: 80
              protocol: TCP
            - name: setup
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: adguard-data
              mountPath: /opt/adguardhome/work
              subPath: work
            - name: adguard-data
              mountPath: /opt/adguardhome/conf
              subPath: conf
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1024Mi"
#          readinessProbe:
#            httpGet:
#              path: /
#              port: 3000
#            initialDelaySeconds: 10
#            periodSeconds: 10
#            timeoutSeconds: 3
#            failureThreshold: 6
#          livenessProbe:
#            httpGet:
#              path: /
#              port: 80
#            initialDelaySeconds: 30
#            periodSeconds: 20
#            timeoutSeconds: 3
#            failureThreshold: 6
  volumeClaimTemplates:
    - metadata:
        name: adguard-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-setup
  namespace: adguard
spec:
  type: NodePort
  selector:
    app: adguardhome
  ports:
    - name: setup
      port: 3000
      targetPort: 3000
      nodePort: 32000
      protocol: TCP
