manifests/adguard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  namespace: adguard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: adguard.codesbyayush.software
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-web
                port:
                  number: 80
